# merge-tracks-with-video

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  NOTICE  README.md  config-generate-video-with-these-files.ini  config-merge-tracks-with-video.ini  delete-temp-files.py  executor.py  generate-video-with-these-files.py  linux-generate-video-with-these-files.sh  main.py  merge-video-from-split-chapters.py  path_methods.py  requirements.txt  setup.py  third_party_tools.py  type_convert.py  version.py  windows-generate-video-with-these-files-v0.2.2.bat  windows-generate-video-with-these-files.bat  windows-run-generate.bat
file_info/: by_ffprobe.py  by_mkvtools.py  duration.py  encoding.py  encoding_detect.py  i_frames.py  keys.py  mkvtools.py  signs.py  track_lang.py  track_name.py
files/: constants.py  directories.py  files.py  find.py  find_directories.py  find_ext.py  find_files.py  found.py  set_dirs.py  set_files.py
flags/: args_processing.py  config.py  flags.py  get_flag.py  locale.py  merge.py  set_flag.py  set_initial.py  set_splitted.py  sys_argv.py
merge/: attachments.py  command_maker.py  errors.py  execute.py  merge.py  merge_command.py  orders.py  params.py  processing.py  set_orders.py  set_params.py
merge_tracks_with_video/: constants.py  main.py  metadata.py  tools.py
options/: arg_handler.py  manager.py  set_methods.py  values.py
scripts/: gen_extension_sets.py  gen_lang_code_enum.py  generate_language_code_enum.py
splitted/: audio.py  chapters.py  common.py  params.py  processing.py  splitted.py  subs.py  subtitles.py  video.py
src/: lib.rs  (+8 more)
(+114 files in other folders)
