[package]
name = "mux-media"
version = "0.13.0-dev1"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
globset = "0.4"
home = "0.5"
itertools = "0.10"
log = "0.4"
once_cell = "1.21.3"
phf = { version = "0.11", features = ["macros"] }
serde_json = "1.0"
strum = "0.25"
strum_macros = "0.25"
locale_config = "0.3"

[dev-dependencies]
serial_test = "2"
